--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -348,6 +348,17 @@ OnlineSubsystemConfigurator_PluginSettings.Experimental=True
 OnlineSubsystemConfiguratorBPLibrarySettings.SubsystemSettings=True
 OnlineSubsystemConfiguratorBPLibrarySettings.SteamSettings=True
 OnlineSubsystemConfiguratorBPLibrarySettings.CustomSettings=True
+MM_GameMode_C.Tick=True
+MM_GameMode_C.Classes=True
+MM_GameMode_C.Game=True
+MM_GameMode_C.GameMode=True
+MyGameMode_C.Tick=True
+MyGameMode_C.Default=True
+MyGameMode_C.Classes=True
+MyGameMode_C.Game=True
+MyGameMode_C.GameMode=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -355,7 +366,7 @@ CleanShutdown=True
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -380,16 +391,20 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Level/MM_Level
-MRUItem1=/Game/MyMenu/MM_Player/MM_Player
-MRUItem2=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem1=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem2=/Game/MyMenu/MM_Player/MM_Player
+MRUItem3=/Game/MyMenu/MM_Level/MM_Level
+MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
 /Game/MyMenu/MM_Player/MM_Player.MM_Player=1
+/Game/MyMenu/MM_GameMode/MM_GameMode.MM_GameMode=1
+/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode=1
 
 [RootWindow]
-ScreenPosition=X=-1636.000 Y=47.000
+ScreenPosition=X=-1492.000 Y=177.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=False
 
