--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -359,6 +359,24 @@ MyGameMode_C.Game=True
 MyGameMode_C.GameMode=True
 IntProperty.Variable=True
 IntProperty.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_CallFunction.Graph=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -376,7 +394,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Level
+ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyPlayer
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -391,11 +409,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem1=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem2=/Game/MyMenu/MM_Player/MM_Player
-MRUItem3=/Game/MyMenu/MM_Level/MM_Level
-MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem0=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem2=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem3=/Game/MyMenu/MM_Player/MM_Player
+MRUItem4=/Game/MyMenu/MM_Level/MM_Level
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -404,7 +422,7 @@ MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
 /Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode=1
 
 [RootWindow]
-ScreenPosition=X=-1492.000 Y=177.000
+ScreenPosition=X=-1815.000 Y=168.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=False
 
