--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,8 +18,8 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=-1605,Y=150)
-LastExecutedPlayModeType=PlayMode_InNewProcess
+NewWindowPosition=(X=315,Y=143)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -65,7 +65,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -81,6 +81,9 @@ LastExecutedLaunchName=JOEYCOMPUTER
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=315,Y=143)
+MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=672,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -102,10 +105,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/MyMenu/MM_Level/MM_Level
+MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyMenu/MM_Level/MM_Level
+LastLevel=/Game/MyWorlds/DefaultWorld
 
 [DetailCategories]
 WorldSettings.World=True
@@ -377,9 +381,82 @@ ByteProperty.Variable=True
 ByteProperty.DefaultValueCategory=True
 BoolProperty.Variable=True
 BoolProperty.DefaultValueCategory=True
+WidgetComponent.Variable=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Sockets=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.Physics=True
+WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+K2Node_VariableSet.Events=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+MyPlayer_C.Variable=True
+MyPlayer_C.Sockets=True
+MyPlayer_C.Character Movement: Jumping / Falling=True
+MyPlayer_C.Character Movement (General Settings)=True
+MyPlayer_C.Character Movement: Walking=True
+MyPlayer_C.Character Movement: Swimming=True
+MyPlayer_C.Character Movement: Flying=True
+MyPlayer_C.Character Movement: Custom Movement=True
+MyPlayer_C.Character Movement (Rotation Settings)=True
+MyPlayer_C.Character Movement (Networking)=True
+MyPlayer_C.Character Movement: Physics Interaction=True
+MyPlayer_C.Character Movement=True
+MyPlayer_C.Character Movement: Avoidance=True
+MyPlayer_C.Character Movement: NavMesh Movement=True
+MyPlayer_C.RootMotion=True
+MyPlayer_C.NavMovement=True
+MyPlayer_C.Velocity=True
+MyPlayer_C.PlanarMovement=True
+MyPlayer_C.MovementComponent=True
+MyPlayer_C.Tags=True
+MyPlayer_C.ComponentReplication=True
+MyPlayer_C.Activation=True
+MyPlayer_C.Cooking=True
+MyPlayer_C.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+K2Node_InputAction.Input=True
+MyPlayer_C.Default=True
+REINST_MyPlayer_C_474.None=True
+REINST_MyPlayer_C_474.Tick=True
+REINST_MyPlayer_C_474.Character=True
+REINST_MyPlayer_C_474.Camera=True
+REINST_MyPlayer_C_474.Pawn=True
+REINST_MyPlayer_C_474.Rendering=True
+REINST_MyPlayer_C_474.Replication=True
+REINST_MyPlayer_C_474.Input=True
+REINST_MyPlayer_C_474.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -406,20 +483,23 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem2=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem3=/Game/MyMenu/MM_Player/MM_Player
-MRUItem4=/Game/MyMenu/MM_Level/MM_Level
+MRUItem1=/Game/MyWorlds/DefaultWorld
+MRUItem2=/Game/MyGame/MyPlayer/HEALTH
+MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem4=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem5=/Game/MyMenu/MM_Player/MM_Player
+MRUItem6=/Game/MyMenu/MM_Level/MM_Level
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
 /Game/MyMenu/MM_Player/MM_Player.MM_Player=1
 /Game/MyMenu/MM_GameMode/MM_GameMode.MM_GameMode=1
 /Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode=1
+/Game/MyGame/MyPlayer/HEALTH.HEALTH=1
 
 [RootWindow]
 ScreenPosition=X=-1815.000 Y=168.000
@@ -1093,5 +1173,32 @@ InstalledPlugins=SubsystemConfigurator
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Lists=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
+
+[WorldBrowser]
+DisplayPaths=False
+DisplayActorsCount=False
 
 
