--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -454,9 +454,117 @@ REINST_MyPlayer_C_474.Rendering=True
 REINST_MyPlayer_C_474.Replication=True
 REINST_MyPlayer_C_474.Input=True
 REINST_MyPlayer_C_474.Actor=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+REINST_MyPlayer_C_485.None=True
+REINST_MyPlayer_C_485.Tick=True
+REINST_MyPlayer_C_485.Character=True
+REINST_MyPlayer_C_485.Camera=True
+REINST_MyPlayer_C_485.Pawn=True
+REINST_MyPlayer_C_485.Rendering=True
+REINST_MyPlayer_C_485.Replication=True
+REINST_MyPlayer_C_485.Input=True
+REINST_MyPlayer_C_485.Actor=True
+REINST_MyPlayer_C_492.None=True
+REINST_MyPlayer_C_492.Tick=True
+REINST_MyPlayer_C_492.Character=True
+REINST_MyPlayer_C_492.Camera=True
+REINST_MyPlayer_C_492.Pawn=True
+REINST_MyPlayer_C_492.Rendering=True
+REINST_MyPlayer_C_492.Replication=True
+REINST_MyPlayer_C_492.Input=True
+REINST_MyPlayer_C_492.Actor=True
+MasterMonster_C.Tick=True
+MasterMonster_C.Character=True
+MasterMonster_C.Camera=True
+MasterMonster_C.Pawn=True
+MasterMonster_C.Rendering=True
+MasterMonster_C.Replication=True
+MasterMonster_C.Input=True
+MasterMonster_C.Actor=True
+MasterMonster_C.TransformCommon=True
+MasterMonster_C.Animation=True
+MasterMonster_C.Mesh=True
+MasterMonster_C.Clothing=True
+MasterMonster_C.Physics=True
+MasterMonster_C.Collision=True
+MasterMonster_C.ClothingSimulation=True
+MasterMonster_C.Lighting=True
+MasterMonster_C.Tags=True
+MasterMonster_C.Activation=True
+MasterMonster_C.Cooking=True
+MasterMonster_C.Character Movement: Jumping / Falling=True
+MasterMonster_C.Character Movement (General Settings)=True
+MasterMonster_C.Character Movement: Walking=True
+MasterMonster_C.Character Movement: Swimming=True
+MasterMonster_C.Character Movement: Flying=True
+MasterMonster_C.Character Movement: Custom Movement=True
+MasterMonster_C.Character Movement (Rotation Settings)=True
+MasterMonster_C.Character Movement: Physics Interaction=True
+MasterMonster_C.Character Movement (Networking)=True
+MasterMonster_C.Character Movement=True
+MasterMonster_C.Character Movement: Avoidance=True
+MasterMonster_C.Character Movement: NavMesh Movement=True
+MasterMonster_C.RootMotion=True
+MasterMonster_C.NavMovement=True
+MasterMonster_C.Velocity=True
+MasterMonster_C.PlanarMovement=True
+MasterMonster_C.MovementComponent=True
+MasterMonster_C.Shape=True
+MasterMonster_C.Navigation=True
+MasterMonster_C.Variable=True
+MasterMonster_C.Sockets=True
+MasterMonster_C.ComponentReplication=True
+MasterMonster_C.Events=True
+REINST_MasterMonster_C_700.Variable=True
+REINST_MasterMonster_C_700.Sockets=True
+REINST_MasterMonster_C_700.Character Movement: Jumping / Falling=True
+REINST_MasterMonster_C_700.Character Movement (General Settings)=True
+REINST_MasterMonster_C_700.Character Movement: Walking=True
+REINST_MasterMonster_C_700.Character Movement: Swimming=True
+REINST_MasterMonster_C_700.Character Movement: Flying=True
+REINST_MasterMonster_C_700.Character Movement: Custom Movement=True
+REINST_MasterMonster_C_700.Character Movement (Rotation Settings)=True
+REINST_MasterMonster_C_700.Character Movement (Networking)=True
+REINST_MasterMonster_C_700.Character Movement: Physics Interaction=True
+REINST_MasterMonster_C_700.Character Movement=True
+REINST_MasterMonster_C_700.Character Movement: Avoidance=True
+REINST_MasterMonster_C_700.Character Movement: NavMesh Movement=True
+REINST_MasterMonster_C_700.RootMotion=True
+REINST_MasterMonster_C_700.NavMovement=True
+REINST_MasterMonster_C_700.Velocity=True
+REINST_MasterMonster_C_700.PlanarMovement=True
+REINST_MasterMonster_C_700.MovementComponent=True
+REINST_MasterMonster_C_700.Tags=True
+REINST_MasterMonster_C_700.ComponentReplication=True
+REINST_MasterMonster_C_700.Activation=True
+REINST_MasterMonster_C_700.Cooking=True
+REINST_MasterMonster_C_700.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+ObjectProperty.Events=True
+MyGameMode_C.PlayerRelated=True
+MyGameMode_C.WaveSystem=True
+MyGameMode_C.MonsterRelated=True
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/MyMonsters/MasterMonster.MasterMonster
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
+OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -486,13 +594,15 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
 MRUItem1=/Game/MyWorlds/DefaultWorld
-MRUItem2=/Game/MyGame/MyPlayer/HEALTH
-MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem4=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem5=/Game/MyMenu/MM_Player/MM_Player
+MRUItem2=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem3=/Game/MyMonsters/MasterMonster
+MRUItem4=/Game/MyGame/MyPlayer/MonsterHealth
+MRUItem5=/Game/MyGame/MyPlayer/HEALTH
 MRUItem6=/Game/MyMenu/MM_Level/MM_Level
+MRUItem7=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem8=/Game/MyMenu/MM_Player/MM_Player
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -500,6 +610,7 @@ MRUItem6=/Game/MyMenu/MM_Level/MM_Level
 /Game/MyMenu/MM_GameMode/MM_GameMode.MM_GameMode=1
 /Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode=1
 /Game/MyGame/MyPlayer/HEALTH.HEALTH=1
+/Game/MyGame/MyPlayer/MonsterHealth.MonsterHealth=1
 
 [RootWindow]
 ScreenPosition=X=-1815.000 Y=168.000
@@ -1200,5 +1311,8 @@ ChangeVariableType_Warning=False
 [WorldBrowser]
 DisplayPaths=False
 DisplayActorsCount=False
+
+[PlacementMode]
+RecentlyPlaced=/Game/MyMonsters/MasterMonster.MasterMonster;
 
 
