--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -559,6 +559,13 @@ ObjectProperty.Events=True
 MyGameMode_C.PlayerRelated=True
 MyGameMode_C.WaveSystem=True
 MyGameMode_C.MonsterRelated=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1296,6 +1303,9 @@ Special Effects=False
 Uncategorized=False
 User Created=False
 
+[DetailCustomWidgetExpansion]
+SphereComponent=SphereComponent.Collision.Collision,
+
 [UMGEditor.Designer]
 PreviewWidth=1280
 PreviewHeight=720
@@ -1307,6 +1317,7 @@ bCanPreviewSwapAspectRatio=False
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1314,5 +1325,13 @@ DisplayActorsCount=False
 
 [PlacementMode]
 RecentlyPlaced=/Game/MyMonsters/MasterMonster.MasterMonster;
+
+[DetailCategoriesAdvanced]
+SphereComponent.Collision=True
+
+[DetailPropertyExpansion]
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 
