Little Update To Meh

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -569,9 +569,6 @@ NavMeshBoundsVolume.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyMonsters/MasterMonster.MasterMonster
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -601,15 +598,15 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem1=/Game/MyWorlds/DefaultWorld
-MRUItem2=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem3=/Game/MyMonsters/MasterMonster
-MRUItem4=/Game/MyGame/MyPlayer/MonsterHealth
-MRUItem5=/Game/MyGame/MyPlayer/HEALTH
-MRUItem6=/Game/MyMenu/MM_Level/MM_Level
-MRUItem7=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem8=/Game/MyMenu/MM_Player/MM_Player
+MRUItem0=/Game/MyMenu/MM_Player/MM_Player
+MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem2=/Game/MyWorlds/DefaultWorld
+MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem4=/Game/MyMonsters/MasterMonster
+MRUItem5=/Game/MyGame/MyPlayer/MonsterHealth
+MRUItem6=/Game/MyGame/MyPlayer/HEALTH
+MRUItem7=/Game/MyMenu/MM_Level/MM_Level
+MRUItem8=/Game/MyMenu/MM_GameMode/MM_GameMode
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -618,6 +615,7 @@ MRUItem8=/Game/MyMenu/MM_Player/MM_Player
 /Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode=1
 /Game/MyGame/MyPlayer/HEALTH.HEALTH=1
 /Game/MyGame/MyPlayer/MonsterHealth.MonsterHealth=1
+/Game/MyMonsters/MasterMonster.MasterMonster=1
 
 [RootWindow]
 ScreenPosition=X=-1815.000 Y=168.000
