--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=315,Y=143)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
+LastExecutedPlayModeType=PlayMode_InNewProcess
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -109,7 +109,7 @@ MRUItem0=/Game/MyWorlds/DefaultWorld
 MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyWorlds/DefaultWorld
+LastLevel=/Game/MyMenu/MM_Level/MM_Level
 
 [DetailCategories]
 WorldSettings.World=True
@@ -566,6 +566,18 @@ NavMeshBoundsVolume.Tags=True
 NavMeshBoundsVolume.Cooking=True
 NavMeshBoundsVolume.BrushSettings=True
 NavMeshBoundsVolume.Actor=True
+MonsterHealth_C.Default=True
+MonsterHealth_C.Appearance=True
+MonsterHealth_C.Designer=True
+MonsterHealth_C.Input=True
+MonsterHealth_C.Interaction=True
+MonsterHealth_C.Performance=True
+MonsterHealth_C.Layout=True
+MonsterHealth_C.Behavior=True
+MonsterHealth_C.Render Transform=True
+MonsterHealth_C.Clipping=True
+MonsterHealth_C.Navigation=True
+MasterMonster_C.Default=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -598,15 +610,16 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Player/MM_Player
-MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem2=/Game/MyWorlds/DefaultWorld
-MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem4=/Game/MyMonsters/MasterMonster
-MRUItem5=/Game/MyGame/MyPlayer/MonsterHealth
-MRUItem6=/Game/MyGame/MyPlayer/HEALTH
-MRUItem7=/Game/MyMenu/MM_Level/MM_Level
-MRUItem8=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem1=/Game/MyMonsters/MasterMonster
+MRUItem2=/Game/MyMonsters/MonsterHealth
+MRUItem3=/Game/MyMenu/MM_Player/MM_Player
+MRUItem4=/Game/MyWorlds/DefaultWorld
+MRUItem5=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem6=/Game/MyGame/MyPlayer/MonsterHealth
+MRUItem7=/Game/MyGame/MyPlayer/HEALTH
+MRUItem8=/Game/MyMenu/MM_Level/MM_Level
+MRUItem9=/Game/MyMenu/MM_GameMode/MM_GameMode
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -616,6 +629,7 @@ MRUItem8=/Game/MyMenu/MM_GameMode/MM_GameMode
 /Game/MyGame/MyPlayer/HEALTH.HEALTH=1
 /Game/MyGame/MyPlayer/MonsterHealth.MonsterHealth=1
 /Game/MyMonsters/MasterMonster.MasterMonster=1
+/Game/MyMonsters/MonsterHealth.MonsterHealth=1
 
 [RootWindow]
 ScreenPosition=X=-1815.000 Y=168.000
