--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=315,Y=143)
-LastExecutedPlayModeType=PlayMode_InNewProcess
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -109,7 +109,7 @@ MRUItem0=/Game/MyWorlds/DefaultWorld
 MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyMenu/MM_Level/MM_Level
+LastLevel=/Game/MyWorlds/DefaultWorld
 
 [DetailCategories]
 WorldSettings.World=True
@@ -578,6 +578,27 @@ MonsterHealth_C.Render Transform=True
 MonsterHealth_C.Clipping=True
 MonsterHealth_C.Navigation=True
 MasterMonster_C.Default=True
+PawnSensingComponent.Variable=True
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.AI=True
+PawnSensingComponent.Tags=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
+PawnSensingComponent.Events=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+MonsterSpawnPoint_C.TransformCommon=True
+MonsterSpawnPoint_C.Rendering=True
+MonsterSpawnPoint_C.Input=True
+MonsterSpawnPoint_C.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -610,12 +631,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem0=/Game/MyGame/MyPlayer/MyPlayer
 MRUItem1=/Game/MyMonsters/MasterMonster
-MRUItem2=/Game/MyMonsters/MonsterHealth
-MRUItem3=/Game/MyMenu/MM_Player/MM_Player
-MRUItem4=/Game/MyWorlds/DefaultWorld
-MRUItem5=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem2=/Game/MyWorlds/DefaultWorld
+MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem4=/Game/MyMonsters/MonsterHealth
+MRUItem5=/Game/MyMenu/MM_Player/MM_Player
 MRUItem6=/Game/MyGame/MyPlayer/MonsterHealth
 MRUItem7=/Game/MyGame/MyPlayer/HEALTH
 MRUItem8=/Game/MyMenu/MM_Level/MM_Level
@@ -1336,6 +1357,7 @@ DisplayPaths=False
 DisplayActorsCount=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/MyMonsters/MonsterSpawnPoint.MonsterSpawnPoint;
 RecentlyPlaced=/Game/MyMonsters/MasterMonster.MasterMonster;
 
 [DetailCategoriesAdvanced]
