--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -681,11 +681,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMonsters/MasterMonster
-MRUItem1=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem2=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem4=/Game/MyMenu/MM_Level/MM_Level
+MRUItem0=/Game/MyMenu/MM_Level/MM_Level
+MRUItem1=/Game/MyMonsters/MasterMonster
+MRUItem2=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
 MRUItem5=/Game/MyWorlds/DefaultWorld
 MRUItem6=/Game/MyMonsters/MonsterHealth
 MRUItem7=/Game/MyMenu/MM_Player/MM_Player
@@ -1420,8 +1420,8 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
+Object="\"Object.Appearance.Font\" "
 
 
