--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -648,10 +648,6 @@ StrProperty.DefaultValueCategory=True
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/PlayerHealth.PlayerHealth
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
-OpenAssetsAtExit=/Game/MyMonsters/MasterMonster.MasterMonster
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -702,6 +698,7 @@ MRUItem10=/Game/MyGame/MyPlayer/HEALTH
 /Game/MyGame/MyPlayer/MonsterHealth.MonsterHealth=1
 /Game/MyMonsters/MasterMonster.MasterMonster=1
 /Game/MyMonsters/MonsterHealth.MonsterHealth=1
+/Game/MyGame/MyPlayer/PlayerHealth.PlayerHealth=1
 
 [RootWindow]
 ScreenPosition=X=-1815.000 Y=168.000
