--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -687,6 +687,10 @@ K2Node_SwitchInteger.PinOptions=True
 K2Node_Tunnel.Graph=True
 K2Node_Tunnel.Inputs=True
 K2Node_Tunnel.Outputs=True
+DefaultWorld_C.Tick=True
+DefaultWorld_C.Replication=True
+DefaultWorld_C.Input=True
+DefaultWorld_C.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -694,6 +698,8 @@ OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
 OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState
 OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
 OpenAssetsAtExit=/Game/MyMonsters/MasterMonster.MasterMonster
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/HealthComponent.HealthComponent
+OpenAssetsAtExit=/Game/MyWorlds/DefaultWorld.DefaultWorld:PersistentLevel.DefaultWorld
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
