--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -694,12 +694,6 @@ DefaultWorld_C.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
-OpenAssetsAtExit=/Game/MyMonsters/MasterMonster.MasterMonster
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/HealthComponent.HealthComponent
-OpenAssetsAtExit=/Game/MyWorlds/DefaultWorld.DefaultWorld:PersistentLevel.DefaultWorld
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -729,15 +723,15 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem1=/Game/MyMonsters/MasterMonster
-MRUItem2=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem3=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem5=/Game/MyWorlds/DefaultWorld
-MRUItem6=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem7=/Game/MyMenu/MM_Level/MM_Level
-MRUItem8=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem0=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem1=/Game/MyWorlds/DefaultWorld
+MRUItem2=/Game/MyMenu/MM_Level/MM_Level
+MRUItem3=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem4=/Game/MyMonsters/MasterMonster
+MRUItem5=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem6=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
+MRUItem7=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem8=/Game/MyMenu/MM_GameMode/MM_GameMode
 MRUItem9=/Game/MyMonsters/MonsterHealth
 MRUItem10=/Game/MyMenu/MM_Player/MM_Player
 MRUItem11=/Game/MyGame/MyPlayer/MonsterHealth
@@ -753,6 +747,8 @@ MRUItem12=/Game/MyGame/MyPlayer/HEALTH
 /Game/MyMonsters/MasterMonster.MasterMonster=1
 /Game/MyMonsters/MonsterHealth.MonsterHealth=1
 /Game/MyGame/MyPlayer/PlayerHealth.PlayerHealth=1
+/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState=1
+/Game/MyGame/MyPlayer/HealthComponent.HealthComponent=1
 
 [RootWindow]
 ScreenPosition=X=-1815.000 Y=168.000
