--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=315,Y=143)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
+LastExecutedPlayModeType=PlayMode_InNewProcess
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -693,12 +693,17 @@ DefaultWorld_C.Input=True
 DefaultWorld_C.Actor=True
 MyPlayer_C.PlayerHealth=True
 MyPlayerState_C.Default=True
+MyGameState_C.Tick=True
+MyGameState_C.GameState=True
+MyGameState_C.Replication=True
+MyGameState_C.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState
 OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
 OpenAssetsAtExit=/Game/MyGame/MyPlayer/PlayerHealth.PlayerHealth
+OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -728,19 +733,20 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem1=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem2=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-MRUItem3=/Game/MyWorlds/DefaultWorld
-MRUItem4=/Game/MyMonsters/MasterMonster
-MRUItem5=/Game/MyMenu/MM_Level/MM_Level
-MRUItem6=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem7=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem8=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem9=/Game/MyMonsters/MonsterHealth
-MRUItem10=/Game/MyMenu/MM_Player/MM_Player
-MRUItem11=/Game/MyGame/MyPlayer/MonsterHealth
-MRUItem12=/Game/MyGame/MyPlayer/HEALTH
+MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem1=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem2=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem3=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
+MRUItem4=/Game/MyWorlds/DefaultWorld
+MRUItem5=/Game/MyMonsters/MasterMonster
+MRUItem6=/Game/MyMenu/MM_Level/MM_Level
+MRUItem7=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem8=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem9=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem10=/Game/MyMonsters/MonsterHealth
+MRUItem11=/Game/MyMenu/MM_Player/MM_Player
+MRUItem12=/Game/MyGame/MyPlayer/MonsterHealth
+MRUItem13=/Game/MyGame/MyPlayer/HEALTH
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
