--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -730,7 +730,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
@@ -1486,8 +1486,8 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
+Object="\"Object.Appearance.Font\" "
 
 
