--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,7 +109,7 @@ MRUItem0=/Game/MyWorlds/DefaultWorld
 MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyMenu/MM_Level/MM_Level
+LastLevel=/Game/MyWorlds/DefaultWorld
 
 [DetailCategories]
 WorldSettings.World=True
@@ -697,6 +697,11 @@ MyGameState_C.Tick=True
 MyGameState_C.GameState=True
 MyGameState_C.Replication=True
 MyGameState_C.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -733,11 +738,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem1=/Game/MyGame/MyPlayer/PlayerHealth
-MRUItem2=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem3=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
-MRUItem4=/Game/MyWorlds/DefaultWorld
+MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem2=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem4=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
 MRUItem5=/Game/MyMonsters/MasterMonster
 MRUItem6=/Game/MyMenu/MM_Level/MM_Level
 MRUItem7=/Game/MyGame/MyPlayer/HealthComponent
