--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -705,10 +705,6 @@ PlayerStart.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/PlayerHealth.PlayerHealth
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -765,6 +761,7 @@ MRUItem13=/Game/MyGame/MyPlayer/HEALTH
 /Game/MyGame/MyPlayer/PlayerHealth.PlayerHealth=1
 /Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState.MyPlayerState=1
 /Game/MyGame/MyPlayer/HealthComponent.HealthComponent=1
+/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState=1
 
 [RootWindow]
 ScreenPosition=X=36.000 Y=242.000
