--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,14 +22,14 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/MyMenu/MM_Level/MM_Level.MM_Level
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/MyWorlds/DefaultWorld.DefaultWorld
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/MyGame/MyGameInstance/MyGameInstance.MyGameInstance_C
 GameDefaultMap=/Game/MyMenu/MM_Level/MM_Level.MM_Level
-ServerDefaultMap=/Engine/Maps/Entry.Entry
+ServerDefaultMap=/Game/MyWorlds/DefaultWorld.DefaultWorld
 GlobalDefaultGameMode=/Game/MyMenu/MM_GameMode/MM_GameMode.MM_GameMode_C
 GlobalDefaultServerGameMode=None
 
