--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1515,6 +1515,7 @@ RecentlyPlaced=/Game/MyMonsters/MonsterSpawnPoint.MonsterSpawnPoint;
 SphereComponent.Collision=True
 EdGraph.Graph=False
 IntProperty.Variable=True
+GameMapsSettings.DefaultMaps=True
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
