--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -751,6 +751,8 @@ REINST_MasterMonster_C_290.Events=True
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
+OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -780,11 +782,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMonsters/MasterMonster
+MRUItem0=/Game/MyGame/MyPlayer/MyPlayer
 MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem2=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem3=/Game/MyWorlds/DefaultWorld
-MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem2=/Game/MyMonsters/MasterMonster
+MRUItem3=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem4=/Game/MyWorlds/DefaultWorld
 MRUItem5=/Game/MyMenu/MM_Level/MM_Level
 MRUItem6=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
 MRUItem7=/Game/MyGame/MyPlayer/PlayerHealth
@@ -1598,12 +1600,12 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
